Hook modifier deformation not shown in edit mode #79119

Closed
opened 2020-07-20 16:56:38 +02:00 by Hans Goudey · 5 comments
Member

System Information
Operating system: Fedora 32
Graphics card: GTX 1080

Blender Version
Broken: 2.90
Worked: 2.83.2

Short description of error
Hook modifier deformation doesn't show in edit mode, even with all of the view toggles enabled

Exact steps for others to reproduce the error
Load this file:Hook_Modifier_Deformation_Visibility_Bug.blend
Or:

  1. Add vertex group to default cube
  2. Assign a vertex to the vertex group
  3. Add a hook modifier
  4. Set the modifier's object to the camera and set the vertex group
  5. Move the camera (Watch the cube deform)
  6. Go to edit mode (No deformation visible)
  7. Turn on the display in edit mode and display on cage toggles. (They do nothing)
**System Information** Operating system: Fedora 32 Graphics card: GTX 1080 **Blender Version** Broken: 2.90 Worked: 2.83.2 **Short description of error** Hook modifier deformation doesn't show in edit mode, even with all of the view toggles enabled **Exact steps for others to reproduce the error** Load this file:[Hook_Modifier_Deformation_Visibility_Bug.blend](https://archive.blender.org/developer/F8709135/Hook_Modifier_Deformation_Visibility_Bug.blend) Or: 1. Add vertex group to default cube 2. Assign a vertex to the vertex group 3. Add a hook modifier 4. Set the modifier's object to the camera and set the vertex group 5. Move the camera (Watch the cube deform) 6. Go to edit mode (No deformation visible) 7. Turn on the display in edit mode and display on cage toggles. (They do nothing)
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Since this is a regression I'm tagging it for 2.90

Since this is a regression I'm tagging it for 2.90
Bastien Montagne self-assigned this 2020-07-29 18:21:17 +02:00

This issue was referenced by 3274ce0a8e

This issue was referenced by 3274ce0a8ea9ff7adb552d71f01bc76c04a8c5ca

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79119
No description provided.