Fix T79119: Hook modifier deformation not shown in edit mode.

Missing temp `BKE_mesh_wrapper_ensure_mdata` hack for the Hook
modifier...